syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.api.grpc";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc ServerStream (HelloRequest) returns (stream HelloResponse);
  rpc ClientStream (stream HelloRequest) returns (HelloResponse);
  rpc biStream (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}